--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ psycopg2-binary==2.9.3
 requests==2.28.1
 pillow==9.2.0
 djangorestframework==3.13.1
+djoser==2.1.0
 django-filter==22.1
 pycryptodome==3.15.0
 
